<resources>
    <string name="app_name">Rabbiter</string>
    <array name="DecideOnPhType">
        <item>Choose from gallery</item>
        <item>Take a photo</item>
    </array>

    <!--GENERAL STRINGS-->
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="genderGroup">Group</string>

    <string-array name="decideOnGender">
        <item>@string/genderMale</item>
        <item>@string/genderFemale</item>
        <item>@string/genderGroup</item>
    </string-array>

    <!--ADD ENTRY ACTIVITY-->
        <string name="title">Add entry</string>
        <!--IMAGE DESCRIPTIONS-->
        <string name="mainImageDesc">This image displays an image to be added in the entry.</string>
        <string name="addBirthDateDesc">A button that adds a birth date to an entry.</string>
        <string name="addMatingDateDesc">A button that adds a mating date of a rabbit.</string>
        <string name="takePhotoDesc">A button that chooses a photo for an entry.</string>
        <string name="addEntryDesc">Confirms the entry content and saves it.</string>
        <string name="mainEntryViewDesc">Views the image that was added to an entry.</string>
        <string name="mergedViewDesc">Image to see the merged rabbit.</string>

        <!--RABBIT ACTIVITY-->
        <string name="appImage">Main image of the app</string>
        <string name="splitEntry">Split entries that were merged</string>
        <string name="mergeEntry">Merge entries</string>

        <!--MENU ITEMS-->
        <string name="menuEditEntry">Edit entry</string>
        <string name="menuDeleteEntry">Delete entry</string>
        <string name="menuShowMerged">Show merged entry</string>
        <string name="menuEntryStatistics">Entry statistics</string>

        <!--TEXT VIEWS-->
        <string name="entryName">Name</string>
        <string name="entryGender">Gender</string>
        <string name="entryGenderColon">Gender: </string>
        <string name="entryBirthDate">Birth date</string>+
        <string name="entryBirthDateColon">Birth date: </string>
        <string name="entryMatingDate">Mating date</string>
        <string name="entryMatedDateColon">Mated date: </string>
        <string name="entryMatedWith">Mated with </string>
        <string name="photoOption">How do you want to get your photo?</string>
        <string name="none">none</string>

        <string name="entryRabbitNum">Number of rabbits: </string>
        <string name="entryRabbitDeadNum">Number of dead rabbits: </string>

        <!--EDIT TEXTS-->
        <string name="editTextName">Name</string>
        <string name="editTextBirthDate">Birth date</string>
        <string name="editTextMatingDate">Mating date</string>
        <!--ENTRY ADDING-->
        <string name="femaleGaveBirth">%1$s: Did %2$s give birth?</string>
        <string name="femaleReadyForMating">%1$s: %2$s is ready for mating</string>
        <string name="groupMovedIntoCage">%1$s: Was the group %2$s moved into another cage?</string>
        <string name="groupSlaughtered">%1$s: Was the group %2$s slaughtered?</string>
    <!--BIRTH FRAGMENT STATS-->
        <string name="successNumBirths">Number of successful births: </string>
        <string name="successBirthsData">Successful births</string>
        <string name="deadNumRabbits">Number of dead rabbits: </string>
        <string name="totalRabbitsBorn">Total rabbits born: </string>
        <string name="totalNumBirths">Total births: </string>
        <string name="totalBirthsData">Total births</string>
    <!--VIEW ENTRY DATA-->
        <string name="OK">OK</string>
        <string name="RabbitAgeText">Rabbit age: </string>
        <string name="rabbitAgeData">Rabbit age</string>
        <string name="confirm">yes</string>
        <string name="decline">no</string>
        <string name="confirmDeletion">Are you sure you want to delete the entry?</string>
        <string name="newMating">New Mating</string>
    <!--VARIABLE STRINGS-->
    <string name="mergedStrings">%1$s , %2$s</string>
    <string name="setParents">Parents: </string>
    <string name="Parents">%1$s %2$s</string>
    <string name="setAge">%1$d years, %2$d months and %3$d days old</string>

    <string name="chooseLanguage">Choose language</string>
    <string-array name="chooseLanguageValues">
        <item>en-GB</item>
        <item>sl-rSI</item>
    </string-array>
    <!--RABBIT ACTIVITY-->
    <string name="alertMoreThan2Chosen">You have chosen more than 2 entries which is not possible</string>

    <!--HISTORY FRAGMENT-->
    <string name="parentOf">Parent of: %1$s</string>
    <!--MENU_RABIT_ACTIVITY-->
    <string name="settings">Settings</string>
    <string name="goOnline">Move Online</string>
    <!--CHARACTERS-->
    <string name="slash">/</string>

</resources>
