<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kocja.rabbiter_reworked.rabbitActivity">
    <item
        android:id="@+id/editEntry"
        android:orderInCategory="100"
        android:title="@string/menuEditEntry"
        app:showAsAction="never" />
    <item
        android:id="@+id/deleteEntry"
        android:orderInCategory="101"
        android:title="@string/menuDeleteEntry" />
    <item
        android:id="@+id/showMergedEntry"
        android:orderInCategory="102"
        android:title="@string/menuShowMerged" />
    <item
        android:id="@+id/entryStats"
        android:orderInCategory="103"
        android:title="@string/menuEntryStatistics" />
</menu>
