<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewEntryViewModel"
            type="com.example.kocja.rabbiter_online.viewmodels.ViewEntryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Name"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/entryName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/entryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@={viewEntryViewModel.entry.entryName}"
            app:layout_constraintBaseline_toBaselineOf="@+id/Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Name" />

        <TextView
            android:id="@+id/Gender"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/entryGender"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <TextView
            android:id="@+id/entryGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@={viewEntryViewModel.entry.chooseGender}"
            app:layout_constraintBaseline_toBaselineOf="@+id/Gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Gender" />

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/entryBirthDate"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Gender" />

        <TextView
            android:id="@+id/entryBirthDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewEntryViewModel.entry.birthDate ?? @string/entryBirthDate}"
            app:layout_constraintBaseline_toBaselineOf="@+id/birthDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/birthDate" />

        <TextView
            android:id="@+id/MatedDateOrParents"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewEntryViewModel.entry.chooseGender==`Group` ? @string/setParents : @string/entryMatingDate}"
            android:textSize="12.1sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDate" />

        <TextView
            android:id="@+id/entryMatedDateOrParents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewEntryViewModel.entry.chooseGender ==`Group` ? @string/parents(viewEntryViewModel.entry.matedWithOrParents,viewEntryViewModel.entry.secondParent) : viewEntryViewModel.entry.matedDate}"
            app:layout_constraintBaseline_toBaselineOf="@+id/MatedDateOrParents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MatedDateOrParents" />

        <TextView
            android:id="@+id/matedWith"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewEntryViewModel.entry.chooseGender ==`Group` ? @string/entryRabbitNum: @string/entryMatedWith}"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MatedDateOrParents" />

        <TextView
            android:id="@+id/entryMatedWith"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@={viewEntryViewModel.entry.chooseGender == `Group` ? viewEntryViewModel.entry.rabbitNumber.toString() : viewEntryViewModel.entry.matedWithOrParents}"
            app:layout_constraintBaseline_toBaselineOf="@+id/matedWith"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/matedWith" />

        <TextView
            android:id="@+id/rabbitAgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/RabbitAgeText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matedWith" />

        <TextView
            android:id="@+id/RabbitAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/rabbitAgeData"
            app:layout_constraintBaseline_toBaselineOf="@+id/rabbitAgeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rabbitAgeText" />

        <TextView
            android:id="@+id/groupRabbitNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/entryRabbitNum"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rabbitAgeText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text=""
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/groupRabbitNum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/groupRabbitNum" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>